--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,9 @@ script:
       if [ $TRAVIS_PULL_REQUEST == "false" ] && [[ "$TRAVIS_BRANCH" =~ backport/v.*|master ]]; then
         $SBT transferPublishAndTagResources;
         TRAVIS_JOB_NUMBER=1 scripts/publishAndTag 'slamdata/quasar-destination-thoughtspot';
+        bumpInDownstream() { echo $1 > slamdata-destination-thoughtspot-version; }
+        export -f bumpInDownstream
+        scripts/bumpDependentProject slamdata slamx bumpInDownstream
       fi
 
 after_success:
