--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,17 @@
-name: destthroughspotbuild
+name: build
 
-on: pull_request
+on:
+  pull_request:
+    branches: [master]
+  push:
+    branches: [master]
 
 env:
   SBT: ./sbt
   JDK: 1.8
   REPO_SLUG: ${{ github.repository }}
   ENCRYPTION_PASSWORD: ${{ secrets.ENCRYPTION_PASSWORD }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   build:
@@ -27,15 +32,15 @@ jobs:
         run: git config github.actor slamdata-bot
       - name: Compile and test
         run: $SBT ++${{ matrix.scala }} ci
-      - name: Upload target
+      - name: Upload working directory
         uses: actions/upload-artifact@v1
         with:
-          name: target
-          path: target
+          name: working-dir
+          path: .
 
-  publishandtag:
+  publish-and-tag:
     name: Publish and Tag
-    if: github.event_name != 'pull_request' && (contains(github.head_ref, 'backport/v.*') || contains(github.head_ref, 'master'))
+    if: github.event_name != 'pull_request' && (contains(github.ref, 'backport/v.*') || contains(github.ref, 'master'))
     needs: [build]
     runs-on: [ubuntu-latest]
     steps:
@@ -44,18 +49,28 @@ jobs:
       - name: Download target artifacts
         uses: actions/download-artifact@v1
         with:
-          name: target
+          name: working-dir
       - name: Setup Git Actor
         run: git config github.actor slamdata-bot
+      - name: Set up JDK ${{ env.JDK }}
+        uses: actions/setup-java@v1
+        with:
+          java-version: ${{ env.JDK }}
+      - name: Install ruby
+        uses: actions/setup-ruby@v1
+        with:
+          ruby-version: '2.6'
       - name: Create scripts dir
         run: mkdir ./scripts
       - name: Transfer Common Resources
         run: $SBT transferCommonResources
       - name: Export common secrets
         run: $SBT exportSecretsForActions
+      - name: Run common setup
+        run: ./scripts/commonSetup
       - name: Transfer Publish and Tag Resources
         run: $SBT transferPublishAndTagResources
-      - name: Run publishAndTag 
+      - name: Run publishAndTag
         run: ./scripts/publishAndTag 'slamdata/quasar-destination-thoughtspot'
       - name: Bump Downstream
         run: |
@@ -63,7 +78,7 @@ jobs:
           export -f bumpInDownstream
           ./scripts/bumpDependentProject slamdata slamx bumpInDownstream
 
-  automerge:
+  auto-merge:
     name: Auto Merge
     if: github.event_name == 'pull_request' && contains(github.head_ref, 'version-bump')
     needs: [build]
@@ -74,7 +89,7 @@ jobs:
       - name: Download target artifacts
         uses: actions/download-artifact@v1
         with:
-          name: target
+          name: working-dir
       - name: Setup Git Actor
         run: git config github.actor slamdata-bot
       - name: Set up JDK ${{ env.JDK }}
@@ -89,6 +104,8 @@ jobs:
         run: $SBT transferCommonResources
       - name: Export common secrets
         run: $SBT exportSecretsForActions
+      - name: Run common setup
+        run: ./scripts/commonSetup
       - name: Set env vars
         run: |
           echo ::set-env name=VERSIONS::$(git diff HEAD^1 | grep -e '^[-+][0-9]' | sed 's/^[+\-]//' | sed 's/\.[0-9]*$//' | uniq | wc -l)
@@ -96,4 +113,4 @@ jobs:
           echo ::set-env name=IS_REVISION_LABEL::${{ contains(github.event.pull_request.labels.*.name, 'revision') }}
           echo ::set-env name=PR_NUMBER::$(echo "$GITHUB_REF" | cut -d'/' -f3)
       - name: Run automerge
-        run: ./scripts/core/checkAndAutoMerge
+        run: ./scripts/checkAndAutoMerge
